Fixed button alignment and font, shrunk navbar a little

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -22,4 +22,7 @@
   color: $dblue;
   width: 125px;
   height: 30px;
+  line-height: 33px;
+  font-weight: 900;
+  font-size: .8em;
 }
