--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -22,3 +22,7 @@
 .navbar-toggler-icon {
   background-image: url("encaminat-lb.png");
 }
+
+#navbar {
+  height: 60px;
+}
